--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,13 +1,13 @@
 {
-  "menu_api": "API",
-  "menu_api_management": "API Management",
-  "menu_api_document": "API Document",
-  "menu_api_log": "API Log",
-  "menu_data": "Data",
-  "menu_data_source": "Data source",
-  "menu_data_modeling": "Data modeling",
-  "menu_identity_providers": "Identity Providers",
-  "menu_settings": "Settings",
+  "api": "API",
+  "api_management": "API Management",
+  "api_document": "API Document",
+  "api_log": "API Log",
+  "data": "Data",
+  "data_source": "Data source",
+  "data_modeling": "Data modeling",
+  "identity_providers": "Identity Providers",
+  "settings": "Settings",
   "new_api": "New API",
   "new_folder": "New Folder",
   "rename": "Rename",
@@ -18,6 +18,8 @@
   "close": "Close",
   "closed": "Closed",
   "config": "Config",
+  "conform": "Conform",
+  "cancel": "Cancel",
   "identity_provider": "Identity Provider",
   "select_a_provider": "Select a provider",
   "api_auth": "API Auth",
@@ -74,5 +76,74 @@
   "connect_success_tips": "Connected successfully",
   "connect_sync_models_tips": "Import models in the background from {{name}}",
   "connect_sync_models_done_tips": "The models was synchronized from {{name}}",
+  "management": "Management",
+  "search_models": "Search Models",
+  "new_entity": "New Entity",
+  "new_enum": "New Enum",
+  "field": "Field",
+  "index": "Index",
+  "record": "Record",
+  "name": "Name",
+  "type": "Type",
+  "unique": "Unique",
+  "nullable": "Nullable",
+  "comment": "Comment",
+  "operations": "Operations",
+  "yes": "Yes",
+  "no": "No",
+  "table_selection_delete_text": "Are you sure to delete this?",
+  "new_field": "New Field",
+  "new_index": "New Index",
+  "new_record": "New Record",
+  "edit_field": "Edit Field",
+  "edit_index": "Edit Index",
+  "edit_record": "Edit Record",
+  "fields": "Fields",
+  "indexes": "Indexes",
+  "length": "Length",
+  "default_value": "Default value",
+  "value_validators": "Value validators",
+  "precision": "Precision",
+  "scale": "Scale",
+  "cardinality": "Cardinality",
+  "one_to_one": "One to one",
+  "one_to_many": "One to many",
+  "many_to_many": "Many to many",
+  "target_field": "Target field",
+  "cascade_delete": "Cascade delete",
+  "field_form_save_success_text": "Field saved successfully",
+  "field_form_save_fail_text": "Failed to save field",
+  "field_asc": "ASC",
+  "field_desc": "DESC",
+  "input_valid_msg": "Please input {{name}}",
+  "idp_management": "IdP management",
+  "idp_new_provider": "New provider",
+  "idp_edit_provider": "Edit provider",
+  "idp_provider_name": "Provider name",
+  "idp_provider_type": "Provider type",
+  "idp_issuer": "Issuer",
+  "idp_discovery_endpoint": "Discovery endpoint",
+  "idp_client_id": "Client ID",
+  "idp_client_secret": "Client Secret",
+  "idp_step_select_provider": "Select provider",
+  "idp_step_create_provider": "Create provider",
+  "idp_step_success": "Success",
+  "idp_create_success": "Created successfully",
+  "idp_btn_go_back": "Go back",
+  "idp_btn_select_provider": "Select provider",
+  "idp_btn_create_provider": "Create provider",
+  "idp_create_tips": "Please select your IdP to create",
+  "idp_user_defined": "User-defined",
+  "idp_social": "Social",
+  "settings_basic_settings": "Basic Settings",
+  "settings_security": "Security",
+  "settings_about": "About",
+  "settings_app_name": "Application Name",
+  "settings_global_api_rate_limiting": "Global API rate limiting",
+  "form_save_success": "Saved successfully",
+  "form_save_fail": "Failed to save",
+  "form_delete_success": "Deleted successfully",
+  "form_delete_fail": "Failed to delete",
+  "app_description": "All-in-one API design platform",
   "welcome": "Welcome to our application"
 }
