--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,13 +1,13 @@
 {
-  "menu_api": "接口",
-  "menu_api_management": "接口管理",
-  "menu_api_document": "接口文档",
-  "menu_api_log": "接口日志",
-  "menu_data": "数据",
-  "menu_data_source": "数据源",
-  "menu_data_modeling": "数据建模",
-  "menu_identity_providers": "身份源",
-  "menu_settings": "设置",
+  "api": "接口",
+  "api_management": "接口管理",
+  "api_document": "接口文档",
+  "api_log": "接口日志",
+  "data": "数据",
+  "data_source": "数据源",
+  "data_modeling": "数据建模",
+  "identity_providers": "身份源",
+  "settings": "设置",
   "new_api": "新建接口",
   "new_folder": "新建文件夹",
   "rename": "重命名",
@@ -18,6 +18,8 @@
   "close": "关闭",
   "closed": "关闭",
   "config": "配置",
+  "conform": "确定",
+  "cancel": "取消",
   "identity_provider": "身份源",
   "select_a_provider": "请选择身份源",
   "api_auth": "接口鉴权",
@@ -74,5 +76,74 @@
   "connect_success_tips": "连接成功",
   "connect_sync_models_tips": "正在后台同步模型到数据库 {{name}}",
   "connect_sync_models_done_tips": "同步模型到数据库 {{name}} 成功",
+  "management": "管理",
+  "search_models": "搜索模型",
+  "new_entity": "新建实体",
+  "new_enum": "新建枚举",
+  "field": "字段",
+  "index": "索引",
+  "record": "记录",
+  "name": "名称",
+  "type": "类型",
+  "unique": "唯一值",
+  "nullable": "可为空",
+  "comment": "注释",
+  "operations": "操作项",
+  "yes": "是",
+  "no": "否",
+  "table_selection_delete_text": "确定删除此项?",
+  "new_field": "新建字段",
+  "new_index": "新建索引",
+  "new_record": "新建记录",
+  "edit_field": "编辑字段",
+  "edit_index": "编辑索引",
+  "edit_record": "编辑记录",
+  "fields": "字段列表",
+  "indexes": "索引列表",
+  "length": "长度",
+  "default_value": "默认值",
+  "value_validators": "值验证器",
+  "precision": "精度",
+  "scale": "保留小数",
+  "cardinality": "关联类型",
+  "one_to_one": "一对一",
+  "one_to_many": "一对多",
+  "many_to_many": "多对多",
+  "target_field": "关联字段",
+  "cascade_delete": "级联删除",
+  "field_form_save_success_text": "字段保存成功",
+  "field_form_save_fail_text": "字段保存失败",
+  "field_asc": "正序",
+  "field_desc": "倒叙",
+  "input_valid_msg": "请输入{{name}}",
+  "idp_management": "身份源管理",
+  "idp_new_provider": "新增身份认证",
+  "idp_edit_provider": "编辑身份认证",
+  "idp_provider_name": "名称",
+  "idp_provider_type": "认证类型",
+  "idp_issuer": "发行机构",
+  "idp_discovery_endpoint": "发现端点",
+  "idp_client_id": "客户端ID",
+  "idp_client_secret": "客户端密钥",
+  "idp_step_select_provider": "选择认证类型",
+  "idp_step_create_provider": "创建身份认证",
+  "idp_step_success": "成功",
+  "idp_create_success": "创建成功",
+  "idp_btn_go_back": "返回",
+  "idp_btn_select_provider": "选择认证类型",
+  "idp_btn_create_provider": "创建身份认证",
+  "idp_create_tips": "请选择要创建的身份源",
+  "idp_user_defined": "用户定义",
+  "idp_social": "社交平台",
+  "settings_basic_settings": "基础设置",
+  "settings_security": "安全",
+  "settings_about": "关于",
+  "settings_app_name": "应用名称",
+  "settings_global_api_rate_limiting": "全局接口限流",
+  "form_save_success": "保存成功",
+  "form_save_fail": "保存失败",
+  "form_delete_success": "删除成功",
+  "form_delete_fail": "删除成功",
+  "app_description": "多场景接口设计平台",
   "welcome": "欢迎来到我们的应用程序"
 }
