--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -146,5 +146,6 @@
   "form_delete_fail": "Failed to delete",
   "app_description": "All-in-one API design platform",
   "pagination_total_text": "{{start}}-{{end}} of {{total}} items",
+  "help": "Help",
   "welcome": "Welcome to our application"
 }
