--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,9 @@
   "times": "times",
   "search_apis": "Search APIs",
   "logs": "Logs",
+  "logs_settings": "Logs settings",
+  "logs_max_days_retention": "Max days retention",
+  "logs_enable_console_Logging": "Enable console logging",
   "search_keywords": "Search Keywords",
   "search": "Search",
   "reset": "Reset",
