--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -30,6 +30,9 @@
   "times": "次",
   "search_apis": "搜索接口",
   "logs": "日志列表",
+  "logs_settings": "日志配置",
+  "logs_max_days_retention": "最大保留天数",
+  "logs_enable_console_Logging": "启用控制台日志记录",
   "search_keywords": "搜索关键字",
   "search": "搜索",
   "reset": "重置",
