--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -164,9 +164,9 @@
   "api_ranking": "接口访问排名",
   "message": "消息",
   "created_at": "创建时间",
-  "graphql_endpoint_enabled": "GraphQL端点",
+  "graphql_endpoint_enabled": "对外开放GraphQL端点",
   "graphql_endpoint_path": "GraphQL端点路径",
-  "graphql_identity_provider": "GraphQL身份源",
+  "graphql_identity_provider": "GraphQL端点身份源",
   "settings_add_route": "添加路由",
   "settings_routes": "路由配置",
   "batch_new_api": "批量新建接口",
