--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   "data": "Data",
   "data_source": "Data source",
   "data_modeling": "Data modeling",
-  "identity_providers": "Identity Providers",
+  "identity_providers": "IdP",
   "settings": "Settings",
   "new_api": "New API",
   "new_folder": "New Folder",
