--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -105,7 +105,6 @@
   "indexes": "索引列表",
   "length": "长度",
   "default_value": "默认值",
-  "value_validators": "值验证器",
   "precision": "精度",
   "scale": "保留小数",
   "cardinality": "关联类型",
@@ -148,7 +147,7 @@
   "form_save_fail": "保存失败",
   "form_delete_success": "删除成功",
   "form_delete_fail": "删除成功",
-  "app_description": "多场景接口设计平台",
+  "app_description": "面向下一代应用程序的统一数据访问层，开源、免费、支持私有化部署",
   "pagination_total_text": "显示{{start}}-{{end}}条 总共{{total}}条",
   "help": "帮助",
   "overview": "概述",
