fix: 调整输入框展示逻辑 & 增加国际化翻译

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -113,6 +113,9 @@
   "many_to_many": "多对多",
   "target_field": "关联字段",
   "cascade_delete": "级联删除",
+  "select_group_id": "唯一标识",
+  "select_group_basic_field": "基础字段",
+  "select_group_relation": "关联模型",
   "field_form_save_success_text": "字段保存成功",
   "field_form_save_fail_text": "字段保存失败",
   "field_asc": "正序",
