--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -113,6 +113,9 @@
   "many_to_many": "Many to many",
   "target_field": "Target field",
   "cascade_delete": "Cascade delete",
+  "select_group_id": "ID",
+  "select_group_basic_field": "Basic field",
+  "select_group_relation": "Relation",
   "field_form_save_success_text": "Field saved successfully",
   "field_form_save_fail_text": "Failed to save field",
   "field_asc": "ASC",
