feat: supports native queries

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -82,7 +82,9 @@
   "management": "Management",
   "search_models": "Search Models",
   "new_entity": "New Entity",
-  "new_enum": "New Enum",
+  "new_native_query": "New Native Query",
+  "entities": "Entities",
+  "native_queries": "Native queries",
   "field": "Field",
   "index": "Index",
   "record": "Record",
