--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -82,7 +82,9 @@
   "management": "管理",
   "search_models": "搜索模型",
   "new_entity": "新建实体",
-  "new_enum": "新建枚举",
+  "new_native_query": "新建本地查询",
+  "entities": "实体",
+  "native_queries": "本地查询",
   "field": "字段",
   "index": "索引",
   "record": "记录",
