feat: add parameters dialog

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
   "rename": "Rename",
   "delete": "Delete",
   "save": "Save",
+  "execute": "Execute",
   "saved": "Saved",
   "enabled": "Enabled",
   "close": "Close",
