--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -13,6 +13,7 @@
   "rename": "重命名",
   "delete": "删除",
   "save": "保存",
+  "execute": "执行",
   "saved": "已保存",
   "enabled": "启用",
   "close": "关闭",
