chore: 调整多语言翻译

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,8 +119,6 @@
   "select_group_id": "ID",
   "select_group_basic_field": "Basic field",
   "select_group_relation": "Relation",
-  "field_form_save_success_text": "Field saved successfully",
-  "field_form_save_fail_text": "Failed to save field",
   "field_asc": "ASC",
   "field_desc": "DESC",
   "input_valid_msg": "Please input {{name}}",
@@ -150,7 +148,7 @@
   "settings_global_api_rate_limiting": "Global API rate limiting",
   "settings_proxy": "Proxy",
   "form_save_success": "Saved successfully",
-  "form_save_fail": "Failed to save",
+  "form_save_failed": "Failed to save",
   "form_delete_success": "Deleted successfully",
   "form_delete_fail": "Failed to delete",
   "app_description": "All-in-one API design platform",
