--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -119,8 +119,6 @@
   "select_group_id": "唯一标识",
   "select_group_basic_field": "基础字段",
   "select_group_relation": "关联模型",
-  "field_form_save_success_text": "字段保存成功",
-  "field_form_save_fail_text": "字段保存失败",
   "field_asc": "正序",
   "field_desc": "倒叙",
   "input_valid_msg": "请输入{{name}}",
@@ -150,7 +148,7 @@
   "settings_app_name": "应用名称",
   "settings_global_api_rate_limiting": "全局接口限流",
   "form_save_success": "保存成功",
-  "form_save_fail": "保存失败",
+  "form_save_failed": "保存失败",
   "form_delete_success": "删除成功",
   "form_delete_fail": "删除成功",
   "app_description": "面向下一代应用程序的统一数据访问层，开源、免费、支持私有化部署",
