chore: 修改接口路径

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -110,11 +110,10 @@
   "default_value": "默认值",
   "precision": "精度",
   "scale": "保留小数",
-  "cardinality": "关联类型",
-  "one_to_one": "一对一",
-  "one_to_many": "一对多",
-  "many_to_many": "多对多",
-  "target_field": "关联字段",
+  "selection_multiple": "多选",
+  "selection_single": "单选",
+  "local_field": "本地字段",
+  "foreign_field": "外键字段",
   "cascade_delete": "级联删除",
   "select_group_id": "唯一标识",
   "select_group_basic_field": "基础字段",
