--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,11 +110,9 @@
   "default_value": "Default value",
   "precision": "Precision",
   "scale": "Scale",
-  "cardinality": "Cardinality",
-  "one_to_one": "One to one",
-  "one_to_many": "One to many",
-  "many_to_many": "Many to many",
-  "target_field": "Target field",
+  "multiple": "Multiple",
+  "local_field": "Local field",
+  "foreign_field": "Target field",
   "cascade_delete": "Cascade delete",
   "select_group_id": "ID",
   "select_group_basic_field": "Basic field",
