chore: 支持枚举字段

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,8 +83,10 @@
   "management": "Management",
   "search_models": "Search Models",
   "new_entity": "New Entity",
+  "new_enum": "New Enum",
   "new_native_query": "New Native query",
   "entities": "Entities",
+  "enums": "Enums",
   "native_queries": "Native queries",
   "field": "Field",
   "index": "Index",
@@ -110,7 +112,8 @@
   "default_value": "Default value",
   "precision": "Precision",
   "scale": "Scale",
-  "multiple": "Multiple",
+  "selection_multiple": "Multiple",
+  "selection_single": "Single",
   "local_field": "Local field",
   "foreign_field": "Foreign field",
   "cascade_delete": "Cascade delete",
@@ -176,6 +179,10 @@
   "path_id_field": "Path id field",
   "generate_apis": "Generate APIs",
   "statement": "Statement",
+  "elements": "Elements",
+  "add_element_at_top": "Add element at top",
+  "add_element_at_bottom": "Add element at bottom",
+  "enum_element_size_valid": "At least 2 elements",
   "parameters": "Parameters",
   "query_execution_failed": "Query execution failed",
   "time_taken": "Time taken",
