--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -83,8 +83,10 @@
   "management": "管理",
   "search_models": "搜索模型",
   "new_entity": "新建实体",
+  "new_enum": "新建枚举",
   "new_native_query": "新建本地查询",
   "entities": "实体",
+  "enums": "枚举",
   "native_queries": "本地查询",
   "field": "字段",
   "index": "索引",
@@ -177,6 +179,10 @@
   "path_id_field": "路径ID字段",
   "generate_apis": "生成接口",
   "statement": "语句",
+  "elements": "元素",
+  "add_element_at_top": "向上添加",
+  "add_element_at_bottom": "向下添加",
+  "enum_element_size_valid": "至少2个元素",
   "parameters": "参数",
   "query_execution_failed": "查询执行失败",
   "time_taken": "耗时",
