--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -119,7 +119,8 @@
   "cascade_delete": "级联删除",
   "select_group_id": "唯一标识",
   "select_group_basic_field": "基础字段",
-  "select_group_relation": "关联模型",
+  "select_group_relation": "关联实体",
+  "select_group_enumeration": "枚举字段",
   "field_asc": "正序",
   "field_desc": "倒叙",
   "input_valid_msg": "请输入{{name}}",
