feat: 支持自定义语法

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,6 +91,7 @@
   "field": "Field",
   "index": "Index",
   "record": "Record",
+  "code": "Code",
   "name": "Name",
   "type": "Type",
   "unique": "Unique",
