fix: 修改IDL展示的位置

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,8 +39,8 @@
   "reset": "Reset",
   "collapse": "Collapse",
   "expand": "Expand",
-  "level": "Level",
-  "select_your_log_level": "Select your log level",
+  "is_success": "Is success",
+  "is_success_tips": "Is success?",
   "date_range": "Date range",
   "load_more": "Load more",
   "datasource_management": "DS management",
