--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -39,8 +39,8 @@
   "reset": "重置",
   "collapse": "折叠",
   "expand": "展开",
-  "level": "级别",
-  "select_your_log_level": "请选择日志级别",
+  "is_success": "状态",
+  "is_success_tips": "是否成功？",
   "date_range": "日期范围",
   "load_more": "加载更多",
   "datasource_management": "数据源管理",
