--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -198,5 +198,8 @@
   "client_ip": "客户端IP",
   "error_message": "错误信息",
   "request_log": "请求日志",
-  "path": "路径"
+  "path": "路径",
+  "toggle_dark_mode": "切换夜间模式",
+  "dark_mode": "夜间",
+  "light_mode": "白天"
 }
