feat: 增加夜间模式

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -201,5 +201,6 @@
    "path": "Path",
   "toggle_dark_mode": "Toggle dark mode",
   "dark_mode": "Dark",
-  "light_mode": "Light"
+  "light_mode": "Light",
+  "code": "Code"
 }
