--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,11 @@
   "data": "Data",
   "data_source": "Data source",
   "data_modeling": "Data modeling",
+  "er_view": "ER View",
+  "loading_models": "Loading model data...",
+  "no_model_data": "No model data",
+  "select_datasource": "Select datasource",
+  "refresh_models": "Refresh model data",
   "identity_providers": "IdP",
   "settings": "Settings",
   "new_api": "New API",
