--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -6,6 +6,11 @@
   "data": "数据",
   "data_source": "数据源",
   "data_modeling": "数据建模",
+  "er_view": "ER视图",
+  "loading_models": "正在加载模型数据...",
+  "no_model_data": "暂无模型数据",
+  "select_datasource": "选择数据源",
+  "refresh_models": "刷新模型数据",
   "identity_providers": "身份源",
   "settings": "设置",
   "new_api": "新建接口",
