--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -162,7 +162,7 @@
   "form_delete_fail": "Failed to delete",
   "field_delete_success": "Field deleted successfully",
   "field_delete_failed": "Failed to delete field",
-  "app_description": "All-in-one API design platform",
+  "app_description": "Make data access easier, more efficient, and more flexible!",
   "pagination_total_text": "{{start}}-{{end}} of {{total}} items",
   "help": "Help",
   "overview": "Overview",
