chore: 调整详情页

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "api": "API",
   "api_management": "API Management",
-  "api_document": "API Document",
+  "open_api": "Open API",
   "api_log": "API Log",
   "data": "Data",
   "data_source": "Data source",
