--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,7 +1,7 @@
 {
   "api": "接口",
   "api_management": "接口管理",
-  "api_document": "接口文档",
+  "open_api": "Open API",
   "api_log": "接口日志",
   "data": "数据",
   "data_source": "数据源",
