feat(layout): 添加侧边栏折叠功能并优化相关页面
- 在 Header 组件中添加侧边栏折叠按钮
- 在 Sidebar 组件中实现折叠状态管理和样式调整
- 更新 APIView 和 Overview 页面以适应新的折叠功能
- 在 appStore 中添加 sidebar 相关的状态和操作

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,8 @@
   "api_management": "API Management",
   "open_api": "Open API",
   "api_log": "API Log",
+  "user_define_api": "User Define API",
+  "graphql_api": "GraphQL",
   "data": "Data",
   "data_source": "Data source",
   "data_modeling": "Data modeling",
