feat(DataModeling): 为字段列表添加图标和标识
- 在 FieldList 组件中添加字段类型图标和主键标识
- 更新英文和中文语言包，增加"identity_field"翻译
- 使用不同颜色的图标表示不同类型的字段- 主键字段使用黄色钥匙图标标识

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,6 +96,7 @@
   "enums": "Enums",
   "native_queries": "Native queries",
   "field": "Field",
+  "identity_field": "Identity Field",
   "index": "Index",
   "record": "Record",
   "name": "Name",
