--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
   "no_model_data": "No model data",
   "select_datasource": "Select datasource",
   "refresh_models": "Refresh model data",
-  "identity_providers": "IdP",
+  "identity_providers": "Identity Providers",
   "settings": "Settings",
   "new_api": "New API",
   "new_folder": "New Folder",
