refactor(layout): 优化页面布局和滚动逻辑
- 固定 Header 组件，根据侧边栏状态调整位置
- 调整 PageLayout 组件，防止整体页面滚动
- 优化 Sidebar组件，使用固定定位并禁止内部滚动
- 移除 Header组件中的部分元素的 Tooltip 包装
- 更新英文翻译文件，将 "Identity Providers" 简写为 "IdP"
- 在 IdPMenu 组件中使用翻译后的 "idp_management" 文本

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
   "no_model_data": "No model data",
   "select_datasource": "Select datasource",
   "refresh_models": "Refresh model data",
-  "identity_providers": "Identity Providers",
+  "identity_providers": "IdP",
   "settings": "Settings",
   "new_api": "New API",
   "new_folder": "New Folder",
