feat(auth): 实现用户认证和登录功能
- 新增用户登录、登出、获取当前用户信息等接口
- 实现token存储和刷新机制
- 添加登录页面和用户信息组件
- 更新路由配置，增加登录保护
- 新增国际化支持，包括中文和英文

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -215,5 +215,22 @@
   "dark_mode": "Dark",
   "light_mode": "Light",
   "code": "Code",
-  "authorization": "Authorization"
+  "authorization": "Authorization",
+  "login": "Login",
+  "logout": "Logout",
+  "username": "Username",
+  "password": "Password",
+  "login_title": "Welcome Back",
+  "login_subtitle": "Make data access easier, more efficient, and more flexible!",
+  "login_username_placeholder": "Enter your username",
+  "login_password_placeholder": "Enter your password",
+  "login_button": "Login",
+  "login_loading": "Logging in...",
+  "login_success": "Login successful",
+  "login_failed": "Login failed",
+  "login_invalid_credentials": "Invalid username or password",
+  "remember_me": "Remember me",
+  "forgot_password": "Forgot password?",
+  "demo_credentials": "Demo: admin / admin123",
+  "demo_login_button": "Login with Demo Account"
 }
