--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -216,5 +216,22 @@
   "light_mode": "白天",
   "code": "代码",
   "confirm": "确认",
-  "authorization": "鉴权"
+  "authorization": "鉴权",
+  "login": "登录",
+  "logout": "退出登录",
+  "username": "用户名",
+  "password": "密码",
+  "login_title": "欢迎登录",
+  "login_subtitle": "让数据访问更简单、更高效、更灵活！",
+  "login_username_placeholder": "请输入用户名",
+  "login_password_placeholder": "请输入密码",
+  "login_button": "登录",
+  "login_loading": "登录中...",
+  "login_success": "登录成功",
+  "login_failed": "登录失败",
+  "login_invalid_credentials": "用户名或密码错误",
+  "remember_me": "记住我",
+  "forgot_password": "忘记密码？",
+  "demo_credentials": "演示账号：admin / admin123",
+  "demo_login_button": "使用演示账号登录"
 }
