feat(data-modeling): 新增模型创建功能
- 添加创建实体和枚举模型的功能
- 实现字段和索引的配置
- 增加默认值和身份字段的设置
- 优化字段类型选择和关系定义
- 添加IDL语法编辑器和文档查看功能

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,7 @@
   "config": "Config",
   "conform": "Conform",
   "cancel": "Cancel",
+  "confirm": "Confirm",
   "identity_provider": "Identity Provider",
   "select_a_provider": "Select a provider",
   "api_auth": "API Auth",
@@ -92,6 +93,44 @@
   "new_entity": "New Entity",
   "new_enum": "New Enum",
   "new_native_query": "New Native query",
+  "create_model": "Create Model",
+  "create_entity": "Create Entity",
+  "create_enum": "Create Enum",
+  "create_native_query": "Create Native Query",
+  "create_model_by_idl": "Create Model by IDL",
+  "idl_editor": "IDL Syntax Editor",
+  "view_idl_docs": "View IDL Syntax Documentation",
+  "idl_syntax_example": "IDL Syntax Example",
+  "enter_idl_code": "Please enter IDL code",
+  "model_created_success": "Model created successfully",
+  "model_creation_failed": "Failed to create model, please check IDL syntax",
+  "name": "Name",
+  "idl": {
+    "model_definition": "Define a new model",
+    "enum_definition": "Define a new enum",
+    "string_type": "String type",
+    "int_type": "Integer type",
+    "long_type": "Long integer type",
+    "float_type": "Float type",
+    "double_type": "Double precision float type",
+    "boolean_type": "Boolean type",
+    "datetime_type": "Date time type",
+    "json_type": "JSON type",
+    "bigint_type": "Big integer type",
+    "decimal_type": "Decimal type",
+    "bytes_type": "Bytes type",
+    "primary_key": "Primary key identifier",
+    "unique_constraint": "Unique constraint",
+    "default_value": "Default value",
+    "field_comment": "Field comment",
+    "field_length": "Field length",
+    "index_definition": "Index definition",
+    "relation_definition": "Relation definition",
+    "generate_ulid": "Generate ULID",
+    "generate_uuid": "Generate UUID",
+    "current_time": "Current time",
+    "auto_increment": "Auto increment"
+  },
   "entities": "Entities",
   "enums": "Enums",
   "native_queries": "Native queries",
@@ -116,8 +155,18 @@
   "edit_record": "Edit Record",
   "fields": "Fields",
   "indexes": "Indexes",
+  "field_form_title": "Field Form",
   "length": "Length",
   "default_value": "Default value",
+  "default_value_fixed": "Fixed value",
+  "default_value_generated": "Generated value",
+  "default_value_generated_placeholder": "Enter generator name, e.g.: autoIncrement",
+  "identity": "Identity",
+  "index_form_title": "Index Form",
+  "select_field": "Select Field",
+  "direction": "Direction",
+  "add_field": "Add Field",
+  "index_field_size_valid": "At least one field is required",
   "precision": "Precision",
   "scale": "Scale",
   "selection_multiple": "Multiple",
