--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -92,6 +92,44 @@
   "new_entity": "新建实体",
   "new_enum": "新建枚举",
   "new_native_query": "新建本地查询",
+  "create_model": "创建模型",
+  "create_entity": "创建实体",
+  "create_enum": "创建枚举",
+  "create_native_query": "创建本地查询",
+  "create_model_by_idl": "创建模型（IDL）",
+  "idl_editor": "IDL语法编辑器",
+  "view_idl_docs": "查看IDL语法文档",
+  "idl_syntax_example": "IDL语法示例",
+  "enter_idl_code": "请输入IDL代码",
+  "model_created_success": "模型创建成功",
+  "model_creation_failed": "创建模型失败，请检查IDL语法",
+  "name": "名称",
+  "idl": {
+    "model_definition": "定义一个新的模型",
+    "enum_definition": "定义一个新的枚举",
+    "string_type": "字符串类型",
+    "int_type": "整数类型",
+    "long_type": "长整数类型",
+    "float_type": "浮点数类型",
+    "double_type": "双精度浮点数类型",
+    "boolean_type": "布尔类型",
+    "datetime_type": "日期时间类型",
+    "json_type": "JSON类型",
+    "bigint_type": "大整数类型",
+    "decimal_type": "十进制类型",
+    "bytes_type": "字节类型",
+    "primary_key": "主键标识",
+    "unique_constraint": "唯一约束",
+    "default_value": "默认值",
+    "field_comment": "字段注释",
+    "field_length": "字段长度",
+    "index_definition": "索引定义",
+    "relation_definition": "关系定义",
+    "generate_ulid": "生成ULID",
+    "generate_uuid": "生成UUID",
+    "current_time": "当前时间",
+    "auto_increment": "自增"
+  },
   "entities": "实体",
   "enums": "枚举",
   "native_queries": "本地查询",
@@ -116,8 +154,18 @@
   "edit_record": "编辑记录",
   "fields": "字段列表",
   "indexes": "索引列表",
+  "field_form_title": "字段表单",
   "length": "长度",
   "default_value": "默认值",
+  "default_value_fixed": "固定值",
+  "default_value_generated": "生成值",
+  "default_value_generated_placeholder": "请输入生成器名称，如：autoIncrement",
+  "identity": "唯一标识",
+  "index_form_title": "索引表单",
+  "select_field": "选择字段",
+  "direction": "方向",
+  "add_field": "添加字段",
+  "index_field_size_valid": "至少需要选择一个字段",
   "precision": "精度",
   "scale": "保留小数",
   "selection_multiple": "多选",
