refactor(api): 重构 API相关组件并国际化
- 更新了多个组件以支持 API管理功能
- 添加了 API 详情页面的国际化支持
- 调整了 API 类型和状态的显示逻辑
-优化了 API 创建表单的结构
- 统一了 API相关的样式和布局

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -179,7 +179,7 @@
   "select_group_relation": "Relation",
   "select_group_enumeration": "Enumeration",
   "type_relation": "Relation",
-  "type_enum": "Enum",
+  "type_enum": "EnumRef",
   "field_asc": "ASC",
   "field_desc": "DESC",
   "input_valid_msg": "Please input {{name}}",
@@ -291,5 +291,33 @@
   "api_address_required": "API address cannot be empty",
   "enter_api_address": "Please enter API address",
   "graphql_query": "GraphQL Query",
-  "create_failed": "Creation failed"
+  "create_failed": "Creation failed",
+  "api_detail": {
+    "select_api_to_view": "Please select an API to view details",
+    "api_id": "API ID",
+    "status": "Status",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "request_method": "Request Method",
+    "request_path": "Request Path",
+    "api_type": "API Type",
+    "parent_id": "Parent ID",
+    "auth_and_permissions": "Authentication & Permissions",
+    "requires_auth": "Requires Authentication",
+    "yes": "Yes",
+    "no": "No",
+    "identity_provider": "Identity Provider",
+    "rate_limiting_enabled": "Rate Limiting Enabled",
+    "max_request_count": "Max Request Count",
+    "interval_in_seconds": "Interval (seconds)",
+    "execution_config": "Execution Configuration",
+    "operation_name": "Operation Name",
+    "query_statement": "Query Statement",
+    "variables": "Variables",
+    "headers": "Headers",
+    "none": "None",
+    "children": "Children",
+    "enable": "Enable",
+    "disable": "Disable"
+  }
 }
