--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -291,5 +291,33 @@
   "api_address_required": "接口地址不能为空",
   "enter_api_address": "请输入接口地址",
   "graphql_query": "GraphQL查询",
-  "create_failed": "创建失败"
+  "create_failed": "创建失败",
+  "api_detail": {
+    "select_api_to_view": "请选择一个 API 以查看详情",
+    "api_id": "API ID",
+    "status": "状态",
+    "enabled": "已启用",
+    "disabled": "已禁用",
+    "request_method": "请求方法",
+    "request_path": "请求路径",
+    "api_type": "API 类型",
+    "parent_id": "父级 ID",
+    "auth_and_permissions": "认证与权限",
+    "requires_auth": "需要认证",
+    "yes": "是",
+    "no": "否",
+    "identity_provider": "身份提供商",
+    "rate_limiting_enabled": "限流启用",
+    "max_request_count": "最大请求数",
+    "interval_in_seconds": "间隔时间(秒)",
+    "execution_config": "执行配置",
+    "operation_name": "操作名称",
+    "query_statement": "查询语句",
+    "variables": "变量",
+    "headers": "请求头",
+    "none": "无",
+    "children": "子项",
+    "enable": "启用",
+    "disable": "禁用"
+  }
 }
